[gd_scene load_steps=10 format=3 uid="uid://dkfwvong7lmki"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_2cvhw"]
[ext_resource type="Texture2D" uid="uid://bqb4j84403j2a" path="res://Sprites/Characters/character_0000.png" id="2_cehwt"]
[ext_resource type="Texture2D" uid="uid://b8ohwm8scl7mt" path="res://Sprites/Characters/character_0001_death.png" id="2_k4kfu"]
[ext_resource type="Texture2D" uid="uid://2k3iywmsqila" path="res://Sprites/Characters/character_0001.png" id="3_fvqxq"]
[ext_resource type="AudioStream" uid="uid://cesq424vl0eem" path="res://Sound/SFX/Death.ogg" id="3_x44u1"]
[ext_resource type="AudioStream" uid="uid://3vhqx2ccx8be" path="res://Sound/SFX/Jump.mp3" id="6_ravld"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_58o0p"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 4.71
angle_min = 153.9
angle_max = 153.9
direction = Vector3(0, -1, 0)
initial_velocity_min = 69.29
initial_velocity_max = 69.29
gravity = Vector3(0, 98, 0)

[sub_resource type="SpriteFrames" id="SpriteFrames_f6yqb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_k4kfu")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_cehwt")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_fvqxq")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_cehwt")
}, {
"duration": 1.0,
"texture": ExtResource("3_fvqxq")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0vlhn"]
radius = 8.0
height = 22.0

[node name="Player" type="CharacterBody2D" groups=["Players"]]
position = Vector2(0, -14)
script = ExtResource("1_2cvhw")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(0, -10)
emitting = false
process_material = SubResource("ParticleProcessMaterial_58o0p")
lifetime = 0.5
fixed_fps = 60

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_f6yqb")
animation = &"idle"

[node name="Sprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_cehwt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_0vlhn")

[node name="CameraFollow" type="RemoteTransform2D" parent="."]
position = Vector2(0, 14)
remote_path = NodePath("../../Camera")

[node name="DeathSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_x44u1")

[node name="JumpSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_ravld")
